syntax = "proto3";

package v1;
import "google/protobuf/timestamp.proto";

service WerftService {
    // Login logs users in
    rpc Login(LoginRequest) returns (stream LoginResponse) {};

    // StartLocalJob starts a job by uploading the workspace content directly. The incoming requests are expected in the following order:
    //   1. metadata
    //   2. all bytes constituting the werft/config.yaml
    //   3. all bytes constituting the job YAML that will be executed (that the config.yaml points to)
    //   4. all bytes constituting the gzipped workspace tar stream
    //   5. the workspace tar stream done marker
    rpc StartLocalJob(stream StartLocalJobRequest) returns (StartJobResponse) {};

    // StartGitHubJob starts a job on a Git context, possibly with a custom job.
    rpc StartGitHubJob(StartGitHubJobRequest) returns (StartJobResponse) {};

    // Searches for jobs known to this instance
    rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {};

    // Subscribe listens to new jobs/job updates
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {};

    // GetJob retrieves details of a single job
    rpc GetJob(GetJobRequest) returns (GetJobResponse) {};

    // Listen listens to job updates and log output of a running job
    rpc Listen(ListenRequest) returns (stream ListenResponse) {};

    // StopJob stops a currently running job
    rpc StopJob(StopJobRequest) returns (StopJobResponse) {};
}

message LoginRequest {
    string provider = 1;
}

message LoginResponse {
    oneof resp {
        string url = 1;
        string token = 2;
    };
}

message StartLocalJobRequest {
    oneof content {
        JobMetadata metadata = 1;
        bytes config_yaml = 2;
        bytes job_yaml = 3;
        bytes workspace_tar = 4;
        bool workspace_tar_done = 5;
    };
}

message StartJobResponse {
    JobStatus status = 1;
}

message StartGitHubJobRequest {
    JobMetadata metadata = 1;
    oneof job {
        string job_name = 2;
        bytes job_yaml = 3;
    };
    string token = 4;
}

message ListJobsRequest {
    repeated FilterExpression filter = 1;
    repeated OrderExpression order = 2;
    int32 start = 3;
    int32 limit = 4;
}

message FilterExpression {
    repeated FilterTerm terms = 1;
}

message FilterTerm {
    string field = 1;
    string value = 2;
    FilterOp operation = 3;
    bool negate = 4;
}

enum FilterOp {
    OP_EQUALS = 0;
    OP_STARTS_WITH = 1;
    OP_ENDS_WITH = 2;
    OP_CONTAINS = 3;
    OP_EXISTS = 4;
}

message OrderExpression {
    string field = 1;
    bool ascending = 2;
}

message ListJobsResponse {
    int32 total = 1;
    repeated JobStatus result = 2;
}

message SubscribeRequest {
    repeated FilterExpression filter = 1;
}

message SubscribeResponse {
    JobStatus result = 1;
}

message GetJobRequest {
    string name = 1;
}

message GetJobResponse {
    JobStatus result = 1;
}

message ListenRequest {
    string name = 1;
    bool updates = 2;
    ListenRequestLogs logs = 3;
}

enum ListenRequestLogs {
    LOGS_DISABLED = 0;
    LOGS_UNSLICED = 1;
    LOGS_RAW = 2;
    LOGS_HTML = 3;
}

message ListenResponse {
    oneof content {
        JobStatus update = 1;
        LogSliceEvent slice = 2;
    };
}

message JobStatus {
    string name = 1;
    JobMetadata metadata = 2;
    JobPhase phase = 3;
    JobConditions conditions = 4;
    string details = 5;
    repeated JobResult results = 6;
}

message JobMetadata {
    string owner = 1;
    Repository repository = 2;
    JobTrigger trigger = 3;
    google.protobuf.Timestamp created = 4;
    google.protobuf.Timestamp finished = 5;
    repeated Annotation annotations = 6;
}

message Repository {
    string host = 1;
    string owner = 2;
    string repo = 3;
    string ref = 4;
    string revision = 5;
}

message Annotation {
    string key = 1;
    string value = 2;
}

enum JobTrigger {
    TRIGGER_UNKNOWN = 0;
    TRIGGER_PUSH = 1;
    TRIGGER_MANUAL = 2;
}

enum JobPhase {
    // Unknown means we don't know what state the job is in
    PHASE_UNKNOWN = 0;

    // Preparing means the job hasn't started yet and isn't consuming resources in the system
    PHASE_PREPARING = 1;

    // Starting means the job has been scheduled and is waiting to run. Things that might prevent it
	// from running already are pod scheduling, image pull or container startup.
    PHASE_STARTING = 2;

    // Running means the job is actually running and doing work.
    PHASE_RUNNING = 3;

    // Done means the job has run and is finished
    PHASE_DONE = 4;

    // Cleaning means the job is in post-run cleanup
    PHASE_CLEANUP = 5;
}

message JobConditions {
    bool success = 1;
    int32 failure_count = 2;
}

message JobResult {
    string type = 1;
    string payload = 2;
    string description = 3;
}

message LogSliceEvent {
    string name = 1;
    LogSliceType type = 2;
    string payload = 3;
}

enum LogSliceType {
    SLICE_ABANDONED = 0;
    SLICE_PHASE = 1;
    SLICE_START = 2;
    SLICE_CONTENT = 3;
    SLICE_DONE = 4;
    SLICE_FAIL = 5;
    SLICE_RESULT = 6;
}

message StopJobRequest {
    string name = 1;
}

message StopJobResponse { }
